# Job-Radar

./: docker-compose.yml  main.py  pyproject.toml
api/: db.py  main.py
api/v1/models/: __init__.py  application.py  base.py  company.py  job.py  refresh_token.py  user.py  user_company.py
api/v1/routers/: __init__.py  admin.py  applications.py  auth.py  companies.py  jobs.py  users.py
api/v1/schemas/: __init__.py  application.py  auth.py  company.py  job.py  pagination.py  user.py
docs/v1/: DESIGN.md  SYSTEM_REQUIREMENTS.md  dbml.txt
