[project]
name = "jobradar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.27",
    "passlib[bcrypt]>=1.7",
    "psycopg[binary]>=3.1",
    "pydantic[email]>=2.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3",
    "sqlalchemy>=2.0",
]
